--- a/style.css
+++ b/style.css
@@ -12,9 +12,20 @@ body {
 }
 
 #background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     width: 100%;
     background-color: black;
+
+}
+
+#wrapper {
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-size: cover;
+    background-image: url(https://images.unsplash.com/photo-1541746972996-4e0b0f43e02a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
 }
 
 #circle {
@@ -24,4 +35,13 @@ body {
     border-radius: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
+}
+
+/* url(https://images.unsplash.com/photo-1541746972996-4e0b0f43e02a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80); */
+
+#background h1 {
+    color: #ffff;
+    font-size: 400px;
+    /* font-weight: 500; */
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
